--- a/aestethic-flames/netlify.toml
+++ b/aestethic-flames/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"  # sau "vite build"
+  command = "npm run build" 
   publish = "dist"
 [[redirects]]
   from = "/*"
